Add chat interface with Sporacle persona, LLM integration, and workflow analysis
- Replaced tab-based UI with chat-first interface
- Integrated OpenAI GPT-4o-mini with RAG for knowledge base
- Added Sporacle character avatar and GIF display
- Implemented safety-first persona with inline term definitions
- Added mushroom parts diagram support for visual guidance
- Created comprehensive workflow analysis document
- Added MDP formulation including CNN classification step
- Updated requirements.txt with OpenAI dependency
- Added technical assessment and mathematical formulation docs

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ __pycache__/
 *.pyo
 
 # Virtual environments
+venv/
 myenv/
 .env/
 .env.*
@@ -23,3 +24,8 @@ Thumbs.db
 
 # Logs
 *.log
+
+# API Keys and secrets
+.streamlit/secrets.toml
+.env
+secrets.toml
